--- a/notebooks/featurize.ipynb
+++ b/notebooks/featurize.ipynb
@@ -2,26 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "import requests\n",
-    "import yaml\n",
-    "import time\n",
-    "from random import shuffle\n",
-    "import json\n",
-    "from pymongo import MongoClient\n",
-    "from collections import Counter\n",
-    "from geopy.geocoders import Nominatim\n",
-    "geolocator = Nominatim()\n",
-    "pd.set_option('display.max_columns', 200)\n",
-    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "import boto3"
+    "from collections import Counter"
    ]
   },
   {
