organized column groups

--- a/notebooks/model.ipynb
+++ b/notebooks/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -139,46 +139,25 @@
     "    df = pd.read_json('../data/featurized_dataframe.json')\n",
     "    print(\"Dataframe read from local .json\")\n",
     "except ValueError:\n",
-    "    print(\"Dataframe json being read from s3\")\n",
+    "    print(\"Dataframe json being read from s3. Consider running \\'featurize.py\\' first if you'll be running this\\\n",
+    "            multiple times.\")\n",
     "    df = pd.read_json('https://s3-us-west-2.amazonaws.com/businesspredictiondata/featurized_dataframe.json')\n",
     "\n",
     "yelp_basic = ['restaurant_count','restaurant_count > 1','restaurant_count > 5',\n",
     "                'restaurant_count > 25','review_count','stars']\n",
     "\n",
-    "yelp_categories = ['Category|Restaurants_true','Category|Food_true',\n",
-    " 'Category|Nightlife_true','Category|Bars_true','Category|Fast Food_true','Category|American (Traditional)_true',\n",
-    " 'Category|Sandwiches_true','Category|Pizza_true','Category|Mexican_true','Category|Burgers_true',\n",
-    " 'Category|American (New)_true','Category|Breakfast & Brunch_true','Category|Coffee & Tea_true',\n",
-    "'Category|Grocery_true','Category|Italian_true','Category|Specialty Food_true','Category|Shopping_true',\n",
-    " 'Category|Chinese_true','Category|Event Planning & Services_true','Category|Chicken Wings_true',\n",
-    "'Category|Salad_true','Category|Bakeries_true','Category|Desserts_true','Category|Convenience Stores_true',\n",
-    "'Category|Ice Cream & Frozen Yogurt_true','Category|Sports Bars_true','Category|Seafood_true','Category|Beer_true',\n",
-    "'Category|Wine & Spirits_true','Category|Caterers_true','Category|Delis_true','Category|Cafes_true',\n",
-    "'Category|Drugstores_true','Category|Japanese_true','Category|Arts & Entertainment_true',\n",
-    "'Category|Juice Bars & Smoothies_true','Category|Pubs_true','Category|Steakhouses_true','Category|Sushi Bars_true',\n",
-    "'Category|Asian Fusion_true','Category|Barbeque_true','Category|Diners_true','Category|Lounges_true',\n",
-    "    'Category|Automotive_true','Category|Gas Stations_true','Category|Cocktail Bars_true',\n",
-    "'Category|Mediterranean_true','Category|Wine Bars_true','Category|Food Trucks_true','Category|Tex-Mex_true']\n",
+    "yelp_categories = [col for col in df.columns if col.startswith('Category')]\n",
     "\n",
+    "yelp_attributes = [col for col in df.columns if col.startswith('Attribute')]\n",
     "\n",
-    "yelp_attributes = ['Attribute|BusinessAcceptsCreditCards value:',\n",
-    " 'Attribute|RestaurantsPriceRange2 value:','Attribute|RestaurantsTakeOut value:',\n",
-    "'Attribute|BusinessParking|garage value:','Attribute|BusinessParking|street value:',\n",
-    "'Attribute|BusinessParking|lot value:', 'Attribute|BusinessParking|valet value:',\n",
-    "'Attribute|BusinessParking|validated value:','Attribute|BikeParking value:','Attribute|OutdoorSeating value:',\n",
-    " 'Attribute|RestaurantsGoodForGroups value:','Attribute|RestaurantsDelivery value:','Attribute|RestaurantsReservations value:',\n",
-    " 'Attribute|GoodForKids value:','Attribute|HasTV value:','Attribute|Ambience|romantic value:',\n",
-    " 'Attribute|Ambience|intimate value:','Attribute|Ambience|classy value:','Attribute|Ambience|hipster value:',\n",
-    " 'Attribute|Ambience|touristy value:','Attribute|Ambience|trendy value:','Attribute|Ambience|upscale value:',\n",
-    " 'Attribute|Ambience|casual value:','Attribute|Ambience|divey value:',\n",
-    " 'Attribute|GoodForMeal|dessert value:','Attribute|GoodForMeal|latenight value:',\n",
-    " 'Attribute|GoodForMeal|lunch value:','Attribute|GoodForMeal|dinner value:','Attribute|GoodForMeal|breakfast value:',\n",
-    " 'Attribute|GoodForMeal|brunch value:','Attribute|Caters value:',\n",
-    " 'Attribute|WheelchairAccessible value:','Attribute|HappyHour value:',\n",
-    " 'Attribute|GoodForDancing value:','Attribute|DriveThru value:','Attribute|Music|dj value:',\n",
-    "'Attribute|Music|background_music value:','Attribute|Music|no_music value:','Attribute|Music|karaoke value:',\n",
-    " 'Attribute|Music|live value:','Attribute|Music|video value:','Attribute|Music|jukebox value:','Attribute|CoatCheck value:',\n",
-    " 'Attribute|DogsAllowed value:']\n",
+    "yelp_review_prefixes = ('one_star','two_to_four_star','five_star')\n",
+    "yelp_review_features = [col for col in df.columns if col.startswith(review_prefixes)]\n",
+    "top_yelp_review_features = rf_best_features(df, yelp_review_features, 100)[1]\n",
+    "\n",
+    "all_yelp_columns = yelp_basic + yelp_attributes + yelp_categories + top_yelp_review_features\n",
+    "\n",
+    "google_maps_nearby_columns = ['avg_price_level','avg_rating','num_nearby_restaurants','relative rating',\n",
+    "                            'price_level','relative_price']\n",
     "\n",
     "census_columns = ['2016 ACS 5-Year Population Estimate',\n",
     "                 'American Indian and Alaska Native alone',\n",
@@ -199,34 +178,19 @@
     "                 'White alone',\n",
     "                 'White alone, Not Hispanic or Latino']\n",
     "\n",
-    "basic_yelp_columns = ['restaurant_count','restaurant_count > 1','restaurant_count > 5',\n",
-    "                'restaurant_count > 25','review_count','stars','Category|Restaurants_true','Category|Food_true',\n",
-    " 'Category|Nightlife_true','Category|Bars_true','Category|Fast Food_true','Category|American (Traditional)_true',\n",
-    " 'Category|Sandwiches_true','Category|Pizza_true','Category|Mexican_true','Category|Burgers_true',\n",
-    " 'Category|American (New)_true','Category|Breakfast & Brunch_true','Category|Coffee & Tea_true',\n",
-    "'Category|Grocery_true','Category|Italian_true','Category|Specialty Food_true','Category|Shopping_true',\n",
-    " 'Category|Chinese_true','Category|Event Planning & Services_true','Category|Chicken Wings_true',\n",
-    "'Category|Salad_true','Category|Bakeries_true','Category|Desserts_true','Category|Convenience Stores_true',\n",
-    "'Category|Ice Cream & Frozen Yogurt_true','Category|Sports Bars_true','Category|Seafood_true',\n",
-    "'Category|Caterers_true','Category|Delis_true','Category|Cafes_true',\n",
-    "'Category|Drugstores_true','Category|Japanese_true','Category|Arts & Entertainment_true',\n",
-    "'Category|Juice Bars & Smoothies_true','Category|Pubs_true','Category|Steakhouses_true','Category|Sushi Bars_true',\n",
-    "'Category|Asian Fusion_true','Category|Barbeque_true','Category|Diners_true','Category|Lounges_true',\n",
-    "'Category|Gas Stations_true','Category|Cocktail Bars_true',\n",
-    "'Category|Mediterranean_true','Category|Wine Bars_true','Category|Food Trucks_true','Category|Tex-Mex_true',\n",
-    "                     'Attribute|RestaurantsPriceRange2 value:']\n",
-    "\n",
-    "yelp_columns = yelp_basic + yelp_attributes + yelp_categories\n",
-    "\n",
-    "review_prefixes = ('one_star','two_to_four_star','five_star')\n",
-    "review_columns = [col for col in df.columns if col.startswith(review_prefixes)]\n",
-    "top_review_values, top_review_columns = rf_best_features(df, review_columns, 100)\n",
-    "\n",
-    "google_maps_nearby_columns = ['avg_price_level','avg_rating','num_nearby_restaurants','relative rating',\n",
-    "                            'price_level','relative_price']\n",
-    "\n",
     "info_columns = ['name','city','state','postal_code','address','business_id','latitude','longitude','neighborhood']\n",
+    "\n",
     "print(\"Column groups created\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_column_sets = [yelp_basic,yelp_categories,yelp_attributes,top_yelp_review_features,\n",
+    "                google_maps_nearby_columns,all_yelp_columns,google_maps_nearby_columns,census_columns]"
    ]
   },
   {
