added graphs to model notebook:

--- a/notebooks/featurize.ipynb
+++ b/notebooks/featurize.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from collections import Counter"
+    "from collections import Counter\n",
+    "import numpy as np"
    ]
   },
   {
@@ -133,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -151,8 +152,8 @@
       "Vectorizing five star text...\n",
       "Removing non-unique features\n",
       "Data downloaded, features engineeered, and dataframe saved!\n",
-      "CPU times: user 7min 12s, sys: 23.9 s, total: 7min 36s\n",
-      "Wall time: 14min 19s\n"
+      "CPU times: user 7min 58s, sys: 43.6 s, total: 8min 41s\n",
+      "Wall time: 15min 37s\n"
      ]
     }
    ],
@@ -338,11 +339,16 @@
     "\n",
     "restaurants_with_reviews.replace('N/A',value=False,inplace=True)\n",
     "\n",
+    "restaurants_with_reviews.replace('no',value=False,inplace=True)\n",
+    "\n",
     "restaurants_with_reviews.drop_duplicates(['name','address'],inplace=True)\n",
     "\n",
     "columns_to_remove = ['attributes','categories','hours','flat_attributes',\n",
     "                     'one_star_text','two_to_four_star_text','five_star_text',\n",
-    "                     'categories']\n",
+    "                     'categories','White alone, Not Hispanic or Latino',\n",
+    "                     'Attribute|Alcohol value:', 'Attribute|RestaurantsAttire value:',\n",
+    "                     'Attribute|NoiseLevel value:', 'Attribute|WiFi value:',\n",
+    "                     'Attribute|Smoking value:']\n",
     "\n",
     "restaurants_with_reviews.drop(columns_to_remove,axis=1,inplace=True)\n",
     "\n",
